--- a/Anyaroth/Anyaroth/Anyaroth.vcxproj
+++ b/Anyaroth/Anyaroth/Anyaroth.vcxproj
@@ -127,6 +127,7 @@
     <ClCompile Include="InputComponent.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="PhysicsComponent.cpp" />
+    <ClCompile Include="PlayerControllerComponent.cpp" />
     <ClCompile Include="PlayState.cpp" />
     <ClCompile Include="RenderComponent.cpp" />
     <ClCompile Include="SpriteComponent.cpp" />
@@ -148,6 +149,7 @@
     <ClInclude Include="InputComponent.h" />
     <ClInclude Include="MovingComponent.h" />
     <ClInclude Include="PhysicsComponent.h" />
+    <ClInclude Include="PlayerControllerComponent.h" />
     <ClInclude Include="PlayState.h" />
     <ClInclude Include="RenderComponent.h" />
     <ClInclude Include="SDLError.h" />
