--- a/Anyaroth/Anyaroth/Anyaroth.vcxproj
+++ b/Anyaroth/Anyaroth/Anyaroth.vcxproj
@@ -129,8 +129,10 @@
     <ClCompile Include="PhysicsComponent.cpp" />
     <ClCompile Include="PlayState.cpp" />
     <ClCompile Include="RenderComponent.cpp" />
+    <ClCompile Include="SpriteComponent.cpp" />
     <ClCompile Include="Texture.cpp" />
     <ClCompile Include="Tile.cpp" />
+    <ClCompile Include="TransformComponent.cpp" />
     <ClCompile Include="TTFclass.cpp" />
     <ClCompile Include="Vector2D.cpp" />
   </ItemGroup>
@@ -149,8 +151,10 @@
     <ClInclude Include="PlayState.h" />
     <ClInclude Include="RenderComponent.h" />
     <ClInclude Include="SDLError.h" />
+    <ClInclude Include="SpriteComponent.h" />
     <ClInclude Include="Texture.h" />
     <ClInclude Include="Tile.h" />
+    <ClInclude Include="TransformComponent.h" />
     <ClInclude Include="TTFclass.h" />
     <ClInclude Include="Vector2D.h" />
   </ItemGroup>
