Quitados tags y añadida textura enemigo

--- a/Anyaroth/Anyaroth/Anyaroth.vcxproj
+++ b/Anyaroth/Anyaroth/Anyaroth.vcxproj
@@ -120,7 +120,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="BoxCollider.cpp" />
-    <ClCompile Include="CollisionManager.cpp" />
+    <ClCompile Include="CollisionHandler.cpp" />
     <ClCompile Include="ExampleObject.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="GameComponent.cpp" />
@@ -140,7 +140,7 @@
     <ClCompile Include="Vector2D.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="CollisionManager.h" />
+    <ClInclude Include="CollisionHandler.h" />
     <ClInclude Include="AnyarothError.h" />
     <ClInclude Include="BoxCollider.h" />
     <ClInclude Include="ExampleObject.h" />
