Container de Componentes funcional
Ahora ya se puede usar:
addComponent<Tipo>();
getComponent<Tipo>();
para acceder a los componentes de los GameComponents

--- a/Anyaroth/Anyaroth/Anyaroth.vcxproj
+++ b/Anyaroth/Anyaroth/Anyaroth.vcxproj
@@ -138,6 +138,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AnyarothError.h" />
+    <ClInclude Include="Component.h" />
     <ClInclude Include="ExampleObject.h" />
     <ClInclude Include="FileFormatError.h" />
     <ClInclude Include="FileNotFoundError.h" />
