--- a/Anyaroth/Anyaroth/Anyaroth.vcxproj.filters
+++ b/Anyaroth/Anyaroth/Anyaroth.vcxproj.filters
@@ -69,6 +69,9 @@
     <ClCompile Include="PlayerControllerComponent.cpp">
       <Filter>Archivos de recursos\Components</Filter>
     </ClCompile>
+    <ClCompile Include="MovingComponent.cpp">
+      <Filter>Archivos de recursos\Components</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game.h">
