--- a/Anyaroth/Anyaroth/Anyaroth.vcxproj
+++ b/Anyaroth/Anyaroth/Anyaroth.vcxproj
@@ -119,6 +119,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="AnimatedSpriteComponent.cpp" />
+    <ClCompile Include="ExampleObject.cpp" />
     <ClCompile Include="FrameComponent.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="GameComponent.cpp" />
@@ -129,6 +131,7 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="MovingComponent.cpp" />
     <ClCompile Include="PhysicsComponent.cpp" />
+    <ClCompile Include="PlayerControllerComponent.cpp" />
     <ClCompile Include="PlayState.cpp" />
     <ClCompile Include="RenderComponent.cpp" />
     <ClCompile Include="SpriteComponent.cpp" />
@@ -139,6 +142,7 @@
     <ClCompile Include="Vector2D.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="AnimatedSpriteComponent.h" />
     <ClInclude Include="AnyarothError.h" />
     <ClInclude Include="Component.h" />
     <ClInclude Include="ExampleObject.h" />
@@ -152,7 +156,9 @@
     <ClInclude Include="GameStateMachine.h" />
     <ClInclude Include="InputComponent.h" />
     <ClInclude Include="Layer.h" />
+    <ClInclude Include="MovingComponent.h" />
     <ClInclude Include="PhysicsComponent.h" />
+    <ClInclude Include="PlayerControllerComponent.h" />
     <ClInclude Include="PlayState.h" />
     <ClInclude Include="RenderComponent.h" />
     <ClInclude Include="SDLError.h" />
